--- a/templatemo_style.css
+++ b/templatemo_style.css
@@ -1,11 +1,11 @@
-/* 
-Fantasy Template 
-http://www.templatemo.com/preview/templatemo_393_fantasy 
+/*
+Fantasy Template
+http://www.templatemo.com/preview/templatemo_393_fantasy
 */
 
-body { 
-	font-family: Helvetica, sans-serif; background: #ddd; overflow-x: hidden; 
-	/*carasmo's comment https://github.com/twbs/bootstrap/issues/10711*/ 
+body {
+	font-family: Helvetica, sans-serif; background: "black"; overflow-x: hidden; 
+	/*carasmo's comment https://github.com/twbs/bootstrap/issues/10711*/
 }
 
 h1, h2, h3, h4, h5, h6 { font-family: Georgia, serif; margin-bottom: 20px; }
@@ -93,13 +93,13 @@ footer a:hover { color: #FFFF00; }
 #img_preview h3 { text-align: center; }
 .footer_item { margin-bottom: 15px; }
 
-.section_box { 
-	border: 1px solid #CCCCCC; 
-	padding: 10px; 
-	background: #F6F6F6; 
-	max-width: 250px; 
+.section_box {
+	border: 1px solid #CCCCCC;
+	padding: 10px;
+	background: #F6F6F6;
+	max-width: 250px;
 	min-height: 230px;
-	text-align: left; 
+	text-align: left;
 }
 
 .section_box p, .section_box li { font-size: 1.3rem; line-height: 2em; }
@@ -113,8 +113,8 @@ footer a:hover { color: #FFFF00; }
 	.navbar-form { margin-top: 0px; width: 100%; }
 	.templatemo-nav { position: fixed; top: 25px; right: 3px; z-index: 1000; }
 	.nav-justified > li > a { padding-left: 40px; padding-right: 40px; }
-	#thumbnails_container { margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; }	
-	#thumbnails_container .col-xs-4, #thumbnails_container .col-sm-3, #thumbnails_container .col-md-3 { padding-left: 5px; padding-right: 5px; }	
+	#thumbnails_container { margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; }
+	#thumbnails_container .col-xs-4, #thumbnails_container .col-sm-3, #thumbnails_container .col-md-3 { padding-left: 5px; padding-right: 5px; }
 	.section_box { height: auto; width: 100%; max-width: none; min-height: 1px; }
 	#templatemo_footer { margin-bottom: 5px; }
 }
@@ -125,7 +125,7 @@ footer a:hover { color: #FFFF00; }
 	.navbar-form { margin-top: 0px; width: 100%; }
 	.templatemo-nav { position: fixed; top: 25px; right: 3px; z-index: 1000; }
 	.nav-justified > li > a { padding-left: 40px; padding-right: 40px; }
-	#thumbnails_container { margin-left: 20px; margin-right: 20px; padding-left: 5px; padding-right: 5px; }	
+	#thumbnails_container { margin-left: 20px; margin-right: 20px; padding-left: 5px; padding-right: 5px; }
 	#thumbnails_container .col-xs-4, #thumbnails_container .col-sm-3, #thumbnails_container .col-md-3 { padding-left: 10px; padding-right: 10px; }
 	#download_box { float: left; padding-top: 10px; margin: 0 auto; }
 	.preview_footer_container {	margin-top: 10px; }
@@ -151,6 +151,6 @@ footer a:hover { color: #FFFF00; }
 	.preview_footer_container {	margin-top: 30px; }
 }
 @media only screen and (min-width: 1200px) {
-	#thumbnails_container .col-xs-4, #thumbnails_container .col-sm-3, #thumbnails_container .col-md-3 { padding-left: 10px; padding-right: 10px; }	
+	#thumbnails_container .col-xs-4, #thumbnails_container .col-sm-3, #thumbnails_container .col-md-3 { padding-left: 10px; padding-right: 10px; }
 	.preview_footer_container {	margin-top: 66px; }
 }
