--- a/templatemo_style.css
+++ b/templatemo_style.css
@@ -4,7 +4,7 @@ http://www.templatemo.com/preview/templatemo_393_fantasy
 */
 
 body {
-	font-family: Helvetica, sans-serif; background: "black"; overflow-x: hidden; 
+	font-family: Helvetica, sans-serif; background: #000000; overflow-x: hidden; 
 	/*carasmo's comment https://github.com/twbs/bootstrap/issues/10711*/
 }
 
